--- a/_posts/2020-11-07-Dask.md
+++ b/_posts/2020-11-07-Dask.md
@@ -113,3 +113,72 @@ SQL query engine built on top of dask, a distributed computation framework writt
     helm upgrade --cleanup-on-fail --install dask-sql dask-sql
     kubectl port-forward svc/hue 8888:8888
     #use http://localhost:8888 to access Apache Hue
+
+### machine learning in sql
+
+#### connect 
+
+    #connect python with dask-sql
+    from IPython.core.magic import register_line_cell_magic
+    from dask_sql import Context# Create a context to store the tables and models
+    c = Context()# Small helper function to make our life easier
+    @register_line_cell_magic
+    def sql(line, cell=None):
+        if cell is None:
+            cell = line
+            line = None
+        
+        if not line:
+            line = {}
+        return c.sql(cell, return_futures=False, **line)
+    
+#### load data
+
+    #load data and cache it in dask-sql
+    CREATE OR REPLACE TABLE iris WITH (
+        location = 'https://datahub.io/machine-learning/iris/r/iris.csv',
+        persist = True
+    )
+    #check loaded data
+    DESCRIBE iris
+    #create new feature
+    CREATE OR REPLACE TABLE transformed_data AS (
+        SELECT 
+            *, 
+            sepallength * petallength AS new_feature
+        FROM iris
+    )
+
+#### train ML model
+
+    #apply k means 
+    CREATE OR REPLACE MODEL clustering WITH (
+        model_class = 'sklearn.cluster.KMeans',
+        wrap_predict = True,
+        n_clusters = 3
+    ) AS (
+        SELECT sepallength, sepalwidth, petallength, petalwidth, new_feature
+        FROM transformed_data
+    )
+
+#### prediction
+
+    #check performace
+    CREATE OR REPLACE TABLE iris_results AS (
+        SELECT class AS label, target AS predicted FROM PREDICT (
+            MODEL clustering,
+            SELECT * FROM transformed_data
+        )
+    )
+    SELECT 
+        label, predicted, COUNT(*) AS numbers
+    FROM iris_results
+    GROUP BY label, predicted
+    #plot
+    df = c.sql("""
+    SELECT 
+        label, predicted, COUNT(*) AS numbers
+    FROM iris_results
+    GROUP BY label, predicted
+    """, return_futures=False)df = df.set_index(["label", "predicted"])
+    df.numbers.unstack(0).plot.bar(ax=plt.gca())
