--- a/_posts/2020-08-09-Docker.md
+++ b/_posts/2020-08-09-Docker.md
@@ -22,6 +22,23 @@ application’s dependencies change less frequently than the Python code. Theref
     # copy the content of the local src directory to the working directory
     COPY src/ .
 
+#### BuildKit’s new caching
+you can cache a directory across builds with Buildkit(normally each build is its own self-contained little filesystem)
+
+    # syntax = docker/dockerfile:1.2
+    FROM python:3.9-slim-buster
+    COPY requirements.txt .
+    #caching the /root/.cache directory, since that is also where Pipenv and Poetry will store their files; pip uses ~/.cache/pip by default
+    RUN --mount=type=cache,target=/root/.cache \
+        pip install -r requirements.txt
+    # ... etc. ...
+
+during docker build you need to activate buildkit with
+
+    export DOCKER_BUILDKIT=1
+
+the limitation with buildkit is that BuildKit caching would not work in cloud docker building, since cloud CI service starts with a new environment every time
+
 ### Multi-stage builds
 using multi-stage builds can strip the final application image of all unnecessary files and software packages and deliver only the files needed to run our Python code.
 
