--- a/_posts/2020-10-11-Seaborn.md
+++ b/_posts/2020-10-11-Seaborn.md
@@ -10,6 +10,11 @@ tags:
     - visualization
 ---
 
+## figure-level function
+fast solution to make a plot
+
+## axes-level function
+solution to make arbitrarily complex plot
 
 ## customerization
 
