--- a/_posts/2020-10-27-Bash.md
+++ b/_posts/2020-10-27-Bash.md
@@ -327,3 +327,54 @@ you can import function defined in other bash script using source, and use that 
     history -d <history command id>
     #clear entire session history
     history -c
+
+## BATS test
+BATS is used to test bash script
+### installation
+
+    git submodule init
+    git submodule add https://github.com/sstephenson/bats test/libs/bats
+    git submodule add https://github.com/ztombol/bats-assert test/libs/bats-assert
+    git submodule add https://github.com/ztombol/bats-support test/libs/bats-support
+    git add .
+    git commit -m 'installed bats'
+
+to clone a git repo with BATS module you need:
+
+    git clone --recurse-submodules
+
+### refactor bash files
+bash script should be splited into small functions and putting all to be execuated function in run_main for better test execuration. 
+
+    if [[ "${BASH_SOURCE[0]}" == "${0}" ]]
+    then
+      run_main
+    fi
+
+### bats test file
+test files are .bats files in test folder, by adding following to test files and chmod +x will make them direct execuable.
+
+    #!/usr/bin/env ./test/libs/bats/bin/bats
+    load 'libs/bats-support/load'
+    load 'libs/bats-assert/load'
+
+    @test "requires CI_COMMIT_REF_SLUG environment variable" {
+        unset CI_COMMIT_REF_SLUG
+        assert_empty "${CI_COMMIT_REF_SLUG}"
+        run some_command
+        assert_failure
+        assert_output --partial "CI_COMMIT_REF_SLUG"
+    }
+
+bats test file supports loading bash libs
+
+    load 'libs/bats-support/load'
+    load 'libs/bats-assert/load'
+    load 'helpers'
+    load 'docker_mock'
+
+mock function 
+
+    function cat() { echo "THIS WOULD CAT ${*}" }
+    export -f cat
+
