--- a/_posts/2020-11-07-Dask.md
+++ b/_posts/2020-11-07-Dask.md
@@ -39,6 +39,16 @@ Dask DataFrame is a logical connection of many Pandas DataFrames
     from dask import datasets
     import dask.dataframe as dd
     df = datasets.timeseries()
+    #convert pandas df to dask df
+    dask.dataframe.from_pandas()
+    #load csv to dask df
+    dask.dataframe.read_csv()
+    #load multi files into one frame
+    import dask.dataframe as dd
+    files_2019 = 's3://nyc-tlc/trip data/yellow_tripdata_2019-*.csv'
+    taxi = dd.read_csv(files_2019, storage_options={'anon': True}, assume_missing=True)
+    daskDF = taxi.persist()
+    _ = wait(daskDF)
 
 ### Visualizing task graphs
 #### save local image
@@ -103,6 +113,10 @@ Dask DataFrame is a logical connection of many Pandas DataFrames
     from math import sqrt
     from sklearn.metrics import mean_squared_error
     Model_rmse = sqrt(mean_squared_error(labels_test, predictions))
+
+### Delayed Functions
+ use @dask.delayed decoration on custom functions to create delayed object 
+
 
 ## Dask-sql
 SQL query engine built on top of dask, a distributed computation framework written purely in Python and playing very well with the Python ecosystem. It allows you to use normal SQL, e.g. from your favorite BI tool, and query data living in the Python space
