--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -13,6 +13,7 @@ tags:
 
 ![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20201226104747.png)
 ## NoSQL
+nosql database stores data in key-value pairs, wide column, graph, or document.
 There are four types for NoSQL database:
 
     Document-oriented.
@@ -26,12 +27,16 @@ There are four types for NoSQL database:
 * used for simpler, more unstructured data, great for app development
 
 ## SQL
-### Postgresql
+sql database stores data in tables with labeled rows and columns.
+### type
+#### Postgresql
 * traditional RDBMS (relational database management system) handling more complex procedures, designs, and integrations. Mainly used for relational data, it is object-oriented in nature
 * PostgreSQL scales vertically
-### SQLAlchemy
+#### MySQL
 
-#### tips
+
+### Tips
+#### SQLAlchemy toolkits
 ##### Column Properties
 
     class User(Base):
@@ -306,7 +311,8 @@ access table column names, check constraints on the table or maybe check if colu
     session_ap    = sessionmaker(bind=engine_ap)
     session_la    = sessionmaker(bind=engine_la)
 
-## HarperDB
+## hybrid database
+### HarperDB
 * distributed DB with restful API and dynamic schema that support SQL and NoSQL including joins.
 * HarperDB is 37 times faster than Mongo at less than half the price. HarperDB also has a native REST API, supports SQL on JSON, and can be easier to use and manage
 * MongoDB and HarperDB are more distributed architectures, whereas PostgreSQL might be considered a monolithic architecture.
@@ -314,7 +320,7 @@ access table column names, check constraints on the table or maybe check if colu
 * Both MongoDB and HarperDB scale horizontally
 * HarperDB is not recommended when you need full-text indexing, highly structured relational data, strict consistency across systems, or for projects where developers are not trusted to constrain and maintain data
 
-### ODBC
+#### ODBC
 ODBC stands for Open Database Connectivity, is a standardised application programming interface (API) for accessing databases
 
     #an example to get data from database and send summary info per email
@@ -376,7 +382,7 @@ ODBC stands for Open Database Connectivity, is a standardised application progra
     # finally, disconnect from the mail server
     smtp.quit()
 
-#### connect
+##### connect
 
     cnxn_str = ("Driver={SQL Server Native Client 11.0};"
             "Server=UKXXX00123,45600;"
@@ -384,17 +390,17 @@ ODBC stands for Open Database Connectivity, is a standardised application progra
             "Trusted_Connection=yes;")
     cnxn = pyodbc.connect(cnxn_str)
 
-#### Query
+##### Query
 
     cursor = cnxn.cursor()
     cursor.execute("SELECT TOP(1000) * FROM customers")
 
-#### Extract Data
+##### Extract Data
 
     data = pd.read_sql("SELECT TOP(1000) * FROM customers", cnxn)
 
 
-#### update data
+##### update data
 
     cursor = cnxn.cursor()
     # first alter the table, adding a column
