--- a/_posts/2020-12-29-AutoML.md
+++ b/_posts/2020-12-29-AutoML.md
@@ -10,12 +10,46 @@ tags:
     - machine learning
 ---
 
+
 automl can deploy thousands of models in production, with far less grunt work and hand-tuning, reducing turn-around-time drastically.
+
+## Auto-Sklearn
+![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210411224217.png)
+it implements Bayesian Optimization for searching of the optimal pipeline configuration as well as Ensemble Selection for the choosing of the right model. it is composed of 15 classifiers, 14 preprocessing methods, and 4 data preprocessing methods.
+![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210411224944.png)
+1. meta-learning: reduce the space search by learning from models that performed well on similar datasets
+2. bayesian optimization: takes the space search created in the meta-learning step and creates bayesian models for finding the optimal pipeline configuration
+3. ensemble selection: a combi model that reuses the most accurate models found in the bayesian optimization step
+
+```# For this basic implementation, we only need these modules
+from sklearn.datasets import load_breast_cancer
+from sklearn.model_selection import train_test_split
+from autosklearn.classification import AutoSklearnClassifier
+
+# Load the well-known Breast Cancer dataset
+# Split into train and test sets
+x, y = load_breast_cancer(return_X_y=True)
+x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.25, random_state=23)
+# Auto-Sklearn Initialization
+model = AutoSklearnClassifier()
+<!-- model = AutoSklearnClassifier(time_left_for_this_task=300, 
+                              per_run_time_limit=30, 
+                              ensemble_size=1, 
+                              initial_configurations_via_metalearning=0) -->
+# Init training
+model.fit(x_train, y_train)
+#check performance of the model
+$ model.score(x_train, y_train)
+0.960093896713615
+$ model.score(x_test, y_test)
+0.965034965034965
+$ print(model.sprint_statistics())
+``` 
 
 ## tpot
 tpot is an automated machine learning tool in python. the official user manual is here: http://epistasislab.github.io/tpot/api/
 ![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210104000151.png)
-it isn’t designed for automating deep learning, but rather classiccal machine learning. it is built on the scikit learn library and follows the scikit learn API. Typical user cases are: regression and classification.    
+it isn’t designed for automating deep learning, but rather classical machine learning. it is built on the scikit learn library and follows the scikit learn API. Typical user cases are: regression and classification.    
 remember that: tpot does not have Reproducibility for the results!!
 ### usage
 
