--- a/_posts/2020-09-05-Hbase.md
+++ b/_posts/2020-09-05-Hbase.md
@@ -9,8 +9,8 @@ catalog: true
 tags:
     - data engineering
 ---
-Hbase is a database to store huge amount of data and at the same time offer random access to data. It is based on Hadoop system to provide read/write access(all files are saved in hdfs)
-HBase is column-oriented database that composed in such sequence:
+Hbase is a noSQL database to store huge amount of data and at the same time offer random access to data. It is based on Hadoop system to provide read/write access(all files are saved in hdfs)
+HBase is column-oriented (which is good for analyse same attribute on large amounts of data) database that composed in such sequence:
 key/value(with timestamp)->column->column family->row->table
 
 ![](https://raw.githubusercontent.com/neverset123/cloudimg/master/20170928231524411.png)
