--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -13,7 +13,7 @@ tags:
 
 ![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20201226104747.png)
 ## NoSQL
-nosql database stores data in key-value pairs, wide column, graph, or document.
+NoSQL database stores data in key-value pairs, wide column, graph, or document. NoSQL is more scalable than RDB, and can make full use of distributed systems to improve read and write performance and reliability.
 There are four types for NoSQL database:
 
     Document-oriented.
@@ -25,9 +25,14 @@ There are four types for NoSQL database:
 ### MongoDB
 * document-oriented, use json like documents with optional schemas.
 * used for simpler, more unstructured data, great for app development
+### redis
+data from different tables are combined into a large object, and saved in the key-value format. it fits for cases that some data does not change very much, but often needs to be queried, and the query is associated with many tables.
+### elastic search
+it offer full text search
 
 ## SQL
-sql database stores data in tables with labeled rows and columns.
+in view of programmer sql database stores data in tables with labeled rows and columns. As for how the data is stored and indexed, it is all handed over to the database.
+sql database has following properties:atomicity, consistency, isolation, durability.
 ### type
 #### Postgresql
 * traditional RDBMS (relational database management system) handling more complex procedures, designs, and integrations. Mainly used for relational data, it is object-oriented in nature
