--- a/_posts/2021-04-17-Flink.md
+++ b/_posts/2021-04-17-Flink.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      kylin
+title:      flink
 subtitle:   
-date:       2021-04-04
+date:       2021-04-17
 author:     neverset
 header-img: img/post-bg-kuaidi.jpg
 catalog: true
@@ -10,5 +10,3 @@ tags:
     - big data
 ---
 
-
-![](https://raw.githubusercontent.com/neverset123/cloudimg/master/Img20210417235229.png)
