--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -34,11 +34,32 @@ it offer full text search
 in view of programmer sql database stores data in tables with labeled rows and columns. As for how the data is stored and indexed, it is all handed over to the database.
 sql database has following properties:atomicity, consistency, isolation, durability.
 ### type
+
 #### Postgresql
 * traditional RDBMS (relational database management system) handling more complex procedures, designs, and integrations. Mainly used for relational data, it is object-oriented in nature
 * PostgreSQL scales vertically
-#### MySQL
 
+advantages over mysql:
+1) Support geographic information processing extension
+2) PostgREST is able to create rest API quickly
+3) Support tree structure
+4) extremely powerful SQL programming skills
+5) support external data sources
+6) no string length limitation
+7) Stronger support for indexes
+8) support cluster setup
+9) Transaction isolation is better
+10) supports larger data volume
+11) easier to add columns
+
+#### MySQL
+mysql advantages over postgres:
+1) rollback performs better
+2) more fitable for windows
+3) resource usage is more efficient because of thread mode
+4) More complete permissions settings
+5) Storage engine plug-in mechanism
+6) more fitable for simple use cases
 
 ### Tips
 #### SQLAlchemy toolkits
