--- a/_posts/2020-12-29-AutoML.md
+++ b/_posts/2020-12-29-AutoML.md
@@ -94,3 +94,182 @@ remember that: tpot does not have Reproducibility for the results!!
     print('Times:', times)
     print('Scores:', scores)   
     print('Winning pipelines:', winning_pipes)
+
+## FLAML
+
+```#installation
+pip install flaml
+```
+
+### Usage
+
+1) Classification
+
+```from flaml importAutoML 
+from sklearn.datasets import load_iris 
+automl = AutoML
+automl_settings = {
+    "time_budget": 10, # in seconds
+    "metric": 'accuracy',
+    "task": 'classification'
+}
+X_train, y_train = load_iris(return_X_y= True)
+# Train with labeled input data
+automl.fit(X_train=X_train, y_train=y_train, **automl_settings)
+print(automl.predict_proba(X_train).shape) 
+# Export the best model
+print(automl.model) 
+print( 'Best ML leaner:', automl.best_estimator)
+print( 'Best hyperparmeter config:', automl.best_config)
+print( 'Best accuracy on validation data: {0:.4g}'.format( 1-automl.best_loss))
+print( 'Training duration of best run: {0:.4g} s'.format(automl.best_config_train_time)) 
+```
+2) regression
+```from sklearn.datasets import load_boston 
+automl = AutoML
+automl_settings = {
+    "time_budget": 10, # in seconds
+    "metric": 'r2',
+    "task": 'regression'
+}
+X_train, y_train = load_boston(return_X_y= True)
+# Train with labeled input data
+automl.fit(X_train=X_train, y_train=y_train, **automl_settings)
+# Predict
+print(automl.predict(X_train).shape)
+# Export the best model
+print(automl.model)
+print( 'Best ML leaner:', automl.best_estimator)
+print( 'Best hyperparmeter config:', automl.best_config)
+print( 'Best accuracy on validation data: {0:.4g}'.format( 1-automl.best_loss))
+print( 'Training duration of best run: {0:.4g} s'.format(automl.best_config_train_time)) 
+```
+
+## ray
+
+### installation
+
+```
+pip install ray
+pip install alfred-py
+```
+
+### usage
+1. tune hyperparameter
+
+```
+'''
+this projects demonstrate
+
+ how to tune
+hyper parameters on a model
+'''
+from ray.tune.schedulers import ASHAScheduler
+import numpy as np
+import torch
+import torch.optim as optim
+import torch.nn as nn
+import torch.nn.functional as F
+
+from ray import tune
+from ray.tune.examples.mnist_pytorch import get_data_loaders
+
+, train, test
+import ray
+import sys
+from alfred.dl.torch.common import device
+
+
+if len(sys.argv) > 1:
+    ray.init(redis_address=sys.argv[1])
+
+
+class ConvNet(nn.Module):
+    def __init__(self):
+        super(ConvNet, self).__init__()
+        self.conv1 = nn.Conv2d(1, 3, kernel_size=3)
+        self.fc = nn.Linear(192, 10)
+
+    def forward(self, x):
+        x = F.relu(F.max_pool2d(self.conv1(x), 3))
+        x = x.view(-1, 192)
+        x = self.fc(x)
+        return F.log_softmax(x, dim=1)
+
+
+def train_mnist(config):
+    model = ConvNet()
+    model.to(device)
+    train_loader, test_loader = get_data_loaders()
+    optimizer = optim.SGD(
+        model.parameters(), lr=config["lr"], momentum=config["momentum"])
+    for i in range(10):
+        train(model, optimizer, train_loader, device)
+        acc = test(model, test_loader, device)
+        # tune.track.log(mean_accuracy=acc)
+        tune.report(mean_accuracy=acc)
+        if i % 5 == 0:
+            # This saves the model to the trial directory
+            torch.save(model.state_dict(), "./model.pth")
+
+
+search_space = {
+    "lr": tune.choice([0.001, 0.01, 0.1]),
+    "momentum": tune.uniform
+
+(0.1, 0.9)
+}
+
+analysis = tune.run(
+    train_mnist,
+    num_samples=30,
+    resources_per_trial={'gpu': 1},
+    scheduler=ASHAScheduler(metric="mean_accuracy",
+                            mode="max", grace_period=1),
+    config=search_space)
+```
+
+2. search in large network
+```
+作者：金天
+链接：https://www.zhihu.com/question/461037620/answer/2339439801
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+import detectron2
+from detectron2.utils.logger import setup_logger
+setup_logger()
+
+import detectron2.data.transforms as T
+
+# import some common detectron2 utilities
+from detectron2 import model_zoo
+from detectron2.data import detection_utils as utils
+from detectron2.data import MetadataCatalog, DatasetCatalog, build_detection_train_loader, DatasetMapper, build_detection_test_loader 
+from detectron2.engine import DefaultTrainer, DefaultPredictor
+from detectron2.config import get_cfg 
+from detectron2.evaluation import COCOEvaluator, inference_on_dataset 
+from detectron2.engine.hooks import HookBase
+from detectron2.data.datasets import register_coco_instances, load_coco_json
+from detectron2.utils.visualizer import Visualizer, ColorMode
+from detectron2.structures.boxes import BoxMode
+
+import numpy as np
+import os, json, cv2, random
+
+# import PointRend project
+from detectron2.projects import point_rend
+
+import copy
+import torch
+import matplotlib.pyplot as plt
+from PIL import Image, ImageDraw
+
+from torchvision.transforms import functional as F
+import random
+import albumentations as A
+
+# Hyperparametertuning
+import ray
+from functools
+```
