add database and celery

--- a/_posts/2020-10-11-Database.md
+++ b/_posts/2020-10-11-Database.md
@@ -27,6 +27,7 @@ There are four types for NoSQL database:
 * used for simpler, more unstructured data, great for app development
 ### redis
 data from different tables are combined into a large object, and saved in the key-value format. it fits for cases that some data does not change very much, but often needs to be queried, and the query is associated with many tables.
+redis geo module can be used for geolocation search.
 ### elastic search
 it offer full text search
 
